--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -15,6 +15,6 @@ spec:
       autoscaling.knative.dev/minScale: "1"
   source:
     git:
-      url: <https URL for your generated project's Git repository>
+      url: https://github.com/rxl7906/weatherforecast-steeltoe
       ref:
         branch: main
