--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -2,7 +2,9 @@ apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
   name: weatherforecast-steeltoe
+  namespace: my-apps
   labels:
+    apps.tanzu.vmware.com/has-tests: true
     apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/part-of: weatherforecast-steeltoe
     tanzu.app.live.view: "true"
